# abcg

./: execute_finance.sh
examples/: CMakeLists.txt
examples/asteroids/: CMakeLists.txt  gamedata.hpp  ship.cpp  window.cpp  window.hpp
examples/coloredtriangles/: window.cpp  window.hpp
examples/finance/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
examples/firstapp/: CMakeLists.txt  window.cpp
examples/lookat/: CMakeLists.txt  main.cpp
examples/regularpolygons/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
examples/sierpinski/: main.cpp  window.cpp
examples/simplepaint/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
examples/simplepaint/assets/: pencil.vert
examples/tictactoe/: CMakeLists.txt  window.cpp  window.hpp
firstapp/: firstapp.js  firstapp.wasm
public/: full_window.html  full_window_console.html
public/atividade1/: finance.data  finance.js  finance.wasm  index.html
public/atividade2/: index.html  simplepaint.data  simplepaint.js  simplepaint.wasm
