# add_subdirectory(finance)
add_subdirectory(simplepaint)
# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(forca)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(regularpolygons)
# add_subdirectory(asteroids)
# add_subdirectory(loadmodel)
